crates/musli/tests/ui/packed_error.stderr
error: Only #[musli(default)] fields can be used at the end of packed containers
 --> tests/ui/packed_error.rs:7:13
  |
7 |     #[musli(default)]
  |             ^^^^^^^

error: Only #[musli(default)] fields can be used at the end of packed containers
  --> tests/ui/packed_error.rs:17:17
   |
17 |         #[musli(default)]
   |                 ^^^^^^^

error: In #[musli(Binary | Text, ..)] an enum cannot be #[musli(packed)]
  --> tests/ui/packed_error.rs:24:9
   |
24 | #[musli(packed)]
   |         ^^^^^^

error: In #[musli(Binary | Text, ..)] an enum cannot be #[musli(packed)]
  --> tests/ui/packed_error.rs:28:9
   |
28 | #[musli(packed)]
   |         ^^^^^^

error: A #[musli(packed)]struct cannot have named fields
  --> tests/ui/packed_error.rs:36:13
   |
36 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(packed)]struct cannot have named fields
  --> tests/ui/packed_error.rs:42:38
   |
42 | struct DenyNamedPackedStruct(#[musli(name = "test")] String);
   |                                      ^^^^

error[E0428]: the name `DenyNamedPackedStruct` is defined multiple times
  --> tests/ui/packed_error.rs:42:1
   |
35 | struct DenyNamedPackedStruct {
   | ---------------------------- previous definition of the type `DenyNamedPackedStruct` here
...
42 | struct DenyNamedPackedStruct(#[musli(name = "test")] String);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DenyNamedPackedStruct` redefined here
   |
   = note: `DenyNamedPackedStruct` must be defined only once in the type namespace of this module

error: A #[musli(packed)]variant cannot have named fields
  --> tests/ui/packed_error.rs:49:17
   |
49 |         #[musli(name = "test")]
   |                 ^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(packed)] variant cannot be used in an enum using #[musli(tag)]
  --> tests/ui/packed_error.rs:45:9
   |
45 | #[musli(tag = "type")]
   |         ^^^

error: A #[musli(packed)]variant cannot have named fields
  --> tests/ui/packed_error.rs:53:19
   |
53 |     Tuple(#[musli(name = "test")] String),
   |                   ^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(packed)] variant cannot be used in an enum using #[musli(tag)]
  --> tests/ui/packed_error.rs:57:9
   |
57 | #[musli(tag = "type")]
   |         ^^^
